[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Inter-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/card.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 185
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[node name="card" type="Area2D" groups=["card"]]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 204, -359, 208, -359, 208, -358, 211, -358, 211, -357, 214, -357, 214, -356, 216, -356, 216, -355, 218, -355, 218, -354, 219, -354, 219, -353, 221, -353, 221, -352, 222, -352, 222, -351, 223, -351, 223, -350, 225, -350, 225, -349, 226, -349, 226, -348, 227, -348, 227, -347, 228, -347, 228, -346, 229, -346, 229, -345, 230, -345, 230, -343, 231, -343, 231, -342, 232, -342, 232, -341, 233, -341, 233, -339, 234, -339, 234, -337, 235, -337, 235, -335, 236, -335, 236, -333, 237, -333, 237, -331, 238, -331, 238, -328, 239, -328, 239, -324, 240, -324, 240, 324, 239, 324, 239, 328, 238, 328, 238, 331, 237, 331, 237, 334, 236, 334, 236, 336, 235, 336, 235, 338, 234, 338, 234, 339, 233, 339, 233, 341, 232, 341, 232, 342, 231, 342, 231, 343, 230, 343, 230, 345, 229, 345, 229, 346, 228, 346, 228, 347, 227, 347, 227, 348, 226, 348, 226, 349, 225, 349, 225, 350, 223, 350, 223, 351, 222, 351, 222, 352, 221, 352, 221, 353, 219, 353, 219, 354, 217, 354, 217, 355, 215, 355, 215, 356, 213, 356, 213, 357, 211, 357, 211, 358, 208, 358, 208, 359, 204, 359, 204, 360, -204, 360, -204, 359, -208, 359, -208, 358, -211, 358, -211, 357, -214, 357, -214, 356, -216, 356, -216, 355, -218, 355, -218, 354, -219, 354, -219, 353, -221, 353, -221, 352, -222, 352, -222, 351, -223, 351, -223, 350, -225, 350, -225, 349, -226, 349, -226, 348, -227, 348, -227, 347, -228, 347, -228, 346, -229, 346, -229, 345, -230, 345, -230, 343, -231, 343, -231, 342, -232, 342, -232, 341, -233, 341, -233, 339, -234, 339, -234, 337, -235, 337, -235, 335, -236, 335, -236, 333, -237, 333, -237, 331, -238, 331, -238, 328, -239, 328, -239, 324, -240, 324, -240, -324, -239, -324, -239, -328, -238, -328, -238, -331, -237, -331, -237, -334, -236, -334, -236, -336, -235, -336, -235, -338, -234, -338, -234, -339, -233, -339, -233, -341, -232, -341, -232, -342, -231, -342, -231, -343, -230, -343, -230, -345, -229, -345, -229, -346, -228, -346, -228, -347, -227, -347, -227, -348, -226, -348, -226, -349, -225, -349, -225, -350, -223, -350, -223, -351, -222, -351, -222, -352, -221, -352, -221, -353, -219, -353, -219, -354, -217, -354, -217, -355, -215, -355, -215, -356, -213, -356, -213, -357, -211, -357, -211, -358, -208, -358, -208, -359, -204, -359, -204, -360, 204, -360 )

[node name="drop_shadow" type="Polygon2D" parent="."]
position = Vector2( 5, 5 )
color = Color( 0, 0, 0, 0.301961 )
polygon = PoolVector2Array( 204, -359, 208, -359, 208, -358, 211, -358, 211, -357, 214, -357, 214, -356, 216, -356, 216, -355, 218, -355, 218, -354, 219, -354, 219, -353, 221, -353, 221, -352, 222, -352, 222, -351, 223, -351, 223, -350, 225, -350, 225, -349, 226, -349, 226, -348, 227, -348, 227, -347, 228, -347, 228, -346, 229, -346, 229, -345, 230, -345, 230, -343, 231, -343, 231, -342, 232, -342, 232, -341, 233, -341, 233, -339, 234, -339, 234, -337, 235, -337, 235, -335, 236, -335, 236, -333, 237, -333, 237, -331, 238, -331, 238, -328, 239, -328, 239, -324, 240, -324, 240, 324, 239, 324, 239, 328, 238, 328, 238, 331, 237, 331, 237, 334, 236, 334, 236, 336, 235, 336, 235, 338, 234, 338, 234, 339, 233, 339, 233, 341, 232, 341, 232, 342, 231, 342, 231, 343, 230, 343, 230, 345, 229, 345, 229, 346, 228, 346, 228, 347, 227, 347, 227, 348, 226, 348, 226, 349, 225, 349, 225, 350, 223, 350, 223, 351, 222, 351, 222, 352, 221, 352, 221, 353, 219, 353, 219, 354, 217, 354, 217, 355, 215, 355, 215, 356, 213, 356, 213, 357, 211, 357, 211, 358, 208, 358, 208, 359, 204, 359, 204, 360, -204, 360, -204, 359, -208, 359, -208, 358, -211, 358, -211, 357, -214, 357, -214, 356, -216, 356, -216, 355, -218, 355, -218, 354, -219, 354, -219, 353, -221, 353, -221, 352, -222, 352, -222, 351, -223, 351, -223, 350, -225, 350, -225, 349, -226, 349, -226, 348, -227, 348, -227, 347, -228, 347, -228, 346, -229, 346, -229, 345, -230, 345, -230, 343, -231, 343, -231, 342, -232, 342, -232, 341, -233, 341, -233, 339, -234, 339, -234, 337, -235, 337, -235, 335, -236, 335, -236, 333, -237, 333, -237, 331, -238, 331, -238, 328, -239, 328, -239, 324, -240, 324, -240, -324, -239, -324, -239, -328, -238, -328, -238, -331, -237, -331, -237, -334, -236, -334, -236, -336, -235, -336, -235, -338, -234, -338, -234, -339, -233, -339, -233, -341, -232, -341, -232, -342, -231, -342, -231, -343, -230, -343, -230, -345, -229, -345, -229, -346, -228, -346, -228, -347, -227, -347, -227, -348, -226, -348, -226, -349, -225, -349, -225, -350, -223, -350, -223, -351, -222, -351, -222, -352, -221, -352, -221, -353, -219, -353, -219, -354, -217, -354, -217, -355, -215, -355, -215, -356, -213, -356, -213, -357, -211, -357, -211, -358, -208, -358, -208, -359, -204, -359, -204, -360, 204, -360 )
uv = PoolVector2Array( 444, 1, 448, 1, 448, 2, 451, 2, 451, 3, 454, 3, 454, 4, 456, 4, 456, 5, 458, 5, 458, 6, 459, 6, 459, 7, 461, 7, 461, 8, 462, 8, 462, 9, 463, 9, 463, 10, 465, 10, 465, 11, 466, 11, 466, 12, 467, 12, 467, 13, 468, 13, 468, 14, 469, 14, 469, 15, 470, 15, 470, 17, 471, 17, 471, 18, 472, 18, 472, 19, 473, 19, 473, 21, 474, 21, 474, 23, 475, 23, 475, 25, 476, 25, 476, 27, 477, 27, 477, 29, 478, 29, 478, 32, 479, 32, 479, 36, 480, 36, 480, 684, 479, 684, 479, 688, 478, 688, 478, 691, 477, 691, 477, 694, 476, 694, 476, 696, 475, 696, 475, 698, 474, 698, 474, 699, 473, 699, 473, 701, 472, 701, 472, 702, 471, 702, 471, 703, 470, 703, 470, 705, 469, 705, 469, 706, 468, 706, 468, 707, 467, 707, 467, 708, 466, 708, 466, 709, 465, 709, 465, 710, 463, 710, 463, 711, 462, 711, 462, 712, 461, 712, 461, 713, 459, 713, 459, 714, 457, 714, 457, 715, 455, 715, 455, 716, 453, 716, 453, 717, 451, 717, 451, 718, 448, 718, 448, 719, 444, 719, 444, 720, 36, 720, 36, 719, 32, 719, 32, 718, 29, 718, 29, 717, 26, 717, 26, 716, 24, 716, 24, 715, 22, 715, 22, 714, 21, 714, 21, 713, 19, 713, 19, 712, 18, 712, 18, 711, 17, 711, 17, 710, 15, 710, 15, 709, 14, 709, 14, 708, 13, 708, 13, 707, 12, 707, 12, 706, 11, 706, 11, 705, 10, 705, 10, 703, 9, 703, 9, 702, 8, 702, 8, 701, 7, 701, 7, 699, 6, 699, 6, 697, 5, 697, 5, 695, 4, 695, 4, 693, 3, 693, 3, 691, 2, 691, 2, 688, 1, 688, 1, 684, 0, 684, 0, 36, 1, 36, 1, 32, 2, 32, 2, 29, 3, 29, 3, 26, 4, 26, 4, 24, 5, 24, 5, 22, 6, 22, 6, 21, 7, 21, 7, 19, 8, 19, 8, 18, 9, 18, 9, 17, 10, 17, 10, 15, 11, 15, 11, 14, 12, 14, 12, 13, 13, 13, 13, 12, 14, 12, 14, 11, 15, 11, 15, 10, 17, 10, 17, 9, 18, 9, 18, 8, 19, 8, 19, 7, 21, 7, 21, 6, 23, 6, 23, 5, 25, 5, 25, 4, 27, 4, 27, 3, 29, 3, 29, 2, 32, 2, 32, 1, 36, 1, 36, 0, 444, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203 ) ]

[node name="back" type="Polygon2D" parent="."]
color = Color( 0.643137, 0.792157, 0.490196, 1 )
polygon = PoolVector2Array( 204, -359, 208, -359, 208, -358, 211, -358, 211, -357, 214, -357, 214, -356, 216, -356, 216, -355, 218, -355, 218, -354, 219, -354, 219, -353, 221, -353, 221, -352, 222, -352, 222, -351, 223, -351, 223, -350, 225, -350, 225, -349, 226, -349, 226, -348, 227, -348, 227, -347, 228, -347, 228, -346, 229, -346, 229, -345, 230, -345, 230, -343, 231, -343, 231, -342, 232, -342, 232, -341, 233, -341, 233, -339, 234, -339, 234, -337, 235, -337, 235, -335, 236, -335, 236, -333, 237, -333, 237, -331, 238, -331, 238, -328, 239, -328, 239, -324, 240, -324, 240, 324, 239, 324, 239, 328, 238, 328, 238, 331, 237, 331, 237, 334, 236, 334, 236, 336, 235, 336, 235, 338, 234, 338, 234, 339, 233, 339, 233, 341, 232, 341, 232, 342, 231, 342, 231, 343, 230, 343, 230, 345, 229, 345, 229, 346, 228, 346, 228, 347, 227, 347, 227, 348, 226, 348, 226, 349, 225, 349, 225, 350, 223, 350, 223, 351, 222, 351, 222, 352, 221, 352, 221, 353, 219, 353, 219, 354, 217, 354, 217, 355, 215, 355, 215, 356, 213, 356, 213, 357, 211, 357, 211, 358, 208, 358, 208, 359, 204, 359, 204, 360, -204, 360, -204, 359, -208, 359, -208, 358, -211, 358, -211, 357, -214, 357, -214, 356, -216, 356, -216, 355, -218, 355, -218, 354, -219, 354, -219, 353, -221, 353, -221, 352, -222, 352, -222, 351, -223, 351, -223, 350, -225, 350, -225, 349, -226, 349, -226, 348, -227, 348, -227, 347, -228, 347, -228, 346, -229, 346, -229, 345, -230, 345, -230, 343, -231, 343, -231, 342, -232, 342, -232, 341, -233, 341, -233, 339, -234, 339, -234, 337, -235, 337, -235, 335, -236, 335, -236, 333, -237, 333, -237, 331, -238, 331, -238, 328, -239, 328, -239, 324, -240, 324, -240, -324, -239, -324, -239, -328, -238, -328, -238, -331, -237, -331, -237, -334, -236, -334, -236, -336, -235, -336, -235, -338, -234, -338, -234, -339, -233, -339, -233, -341, -232, -341, -232, -342, -231, -342, -231, -343, -230, -343, -230, -345, -229, -345, -229, -346, -228, -346, -228, -347, -227, -347, -227, -348, -226, -348, -226, -349, -225, -349, -225, -350, -223, -350, -223, -351, -222, -351, -222, -352, -221, -352, -221, -353, -219, -353, -219, -354, -217, -354, -217, -355, -215, -355, -215, -356, -213, -356, -213, -357, -211, -357, -211, -358, -208, -358, -208, -359, -204, -359, -204, -360, 204, -360 )
uv = PoolVector2Array( 444, 1, 448, 1, 448, 2, 451, 2, 451, 3, 454, 3, 454, 4, 456, 4, 456, 5, 458, 5, 458, 6, 459, 6, 459, 7, 461, 7, 461, 8, 462, 8, 462, 9, 463, 9, 463, 10, 465, 10, 465, 11, 466, 11, 466, 12, 467, 12, 467, 13, 468, 13, 468, 14, 469, 14, 469, 15, 470, 15, 470, 17, 471, 17, 471, 18, 472, 18, 472, 19, 473, 19, 473, 21, 474, 21, 474, 23, 475, 23, 475, 25, 476, 25, 476, 27, 477, 27, 477, 29, 478, 29, 478, 32, 479, 32, 479, 36, 480, 36, 480, 684, 479, 684, 479, 688, 478, 688, 478, 691, 477, 691, 477, 694, 476, 694, 476, 696, 475, 696, 475, 698, 474, 698, 474, 699, 473, 699, 473, 701, 472, 701, 472, 702, 471, 702, 471, 703, 470, 703, 470, 705, 469, 705, 469, 706, 468, 706, 468, 707, 467, 707, 467, 708, 466, 708, 466, 709, 465, 709, 465, 710, 463, 710, 463, 711, 462, 711, 462, 712, 461, 712, 461, 713, 459, 713, 459, 714, 457, 714, 457, 715, 455, 715, 455, 716, 453, 716, 453, 717, 451, 717, 451, 718, 448, 718, 448, 719, 444, 719, 444, 720, 36, 720, 36, 719, 32, 719, 32, 718, 29, 718, 29, 717, 26, 717, 26, 716, 24, 716, 24, 715, 22, 715, 22, 714, 21, 714, 21, 713, 19, 713, 19, 712, 18, 712, 18, 711, 17, 711, 17, 710, 15, 710, 15, 709, 14, 709, 14, 708, 13, 708, 13, 707, 12, 707, 12, 706, 11, 706, 11, 705, 10, 705, 10, 703, 9, 703, 9, 702, 8, 702, 8, 701, 7, 701, 7, 699, 6, 699, 6, 697, 5, 697, 5, 695, 4, 695, 4, 693, 3, 693, 3, 691, 2, 691, 2, 688, 1, 688, 1, 684, 0, 684, 0, 36, 1, 36, 1, 32, 2, 32, 2, 29, 3, 29, 3, 26, 4, 26, 4, 24, 5, 24, 5, 22, 6, 22, 6, 21, 7, 21, 7, 19, 8, 19, 8, 18, 9, 18, 9, 17, 10, 17, 10, 15, 11, 15, 11, 14, 12, 14, 12, 13, 13, 13, 13, 12, 14, 12, 14, 11, 15, 11, 15, 10, 17, 10, 17, 9, 18, 9, 18, 8, 19, 8, 19, 7, 21, 7, 21, 6, 23, 6, 23, 5, 25, 5, 25, 4, 27, 4, 27, 3, 29, 3, 29, 2, 32, 2, 32, 1, 36, 1, 36, 0, 444, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203 ) ]

[node name="center_number" type="Label" parent="."]
margin_left = -55.0
margin_top = -112.0
margin_right = 55.0
margin_bottom = 113.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.3 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "7"
align = 1
valign = 1

[node name="bottom_number" type="Label" parent="."]
margin_left = 201.0
margin_top = 320.0
margin_right = 249.0
margin_bottom = 418.0
rect_rotation = 180.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.3 )
custom_constants/shadow_offset_x = -5
custom_constants/shadow_offset_y = -5
custom_fonts/font = SubResource( 2 )
text = "7"
align = 1
valign = 1

[node name="top_number" type="Label" parent="."]
margin_left = -201.0
margin_top = -320.0
margin_right = -153.0
margin_bottom = -222.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.3 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 2 )
text = "7"
align = 1
valign = 1
